<resources>
    <string name="app_name">Taskify</string>

    <string name="side_panel_all">All</string>
    <string name="side_panel_today">Today</string>
    <string name="side_panel_planned">Planned</string>
    <string name="side_panel_completed">Completed</string>

    <string name="alert_time_picker_dismiss">Dismiss</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_permission_title">Notification permission required</string>
    <string name="alert_permission_text">This app requires notification permission to function properly. Please enable it in settings</string>
    <string name="alert_permission_dismiss">Skip</string>
...
