...
                            contentColor = Color.White,
                            modifier = Modifier
                                .size(52.dp),
                        ) {
                            Icon(
                                imageVector = Icons.Default.Add,
                                contentDescription = "Add task",
                                modifier = Modifier.size(40.dp)
                            )
                        }
                    }
                },
            ) { paddingValues ->
...
