...
        }
        Spacer(modifier = Modifier.weight(1f))
        if (!task.title.isNullOrEmpty() || !task.description.isNullOrEmpty()) {
            IconButton(onClick = onSaveTask) {
                Icon(
                    imageVector = Icons.Outlined.NearMe,
                    contentDescription = "Create/update task",
                    tint = MaterialTheme.colorScheme.primary,
                    modifier = Modifier.graphicsLayer(rotationZ = -315f)
                )
            }
        }
    }
...
