...
        vibrator.vibrate(VibrationEffect.createPredefined(VibrationEffect.EFFECT_TICK))
    }
    if (taskViewType == TaskViewType.DefaultView) {
        TaskSummaryDefaultView(
            task = task,
            checkBox = {
                Checkbox(
                    checked = task.isCompleted,
                    onCheckedChange = { if (!task.isCompleted) markAsCompleted() },
                    enabled = !task.isCompleted,
                    colors = CheckboxDefaults.colors(
                        uncheckedColor = when (task.priority) {
                            Priority.High -> Color(0xFFAF2A2A)
...
